gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/gag4269a.d
version https://git-lfs.github.com/spec/v1
oid sha256:0271aa7a74fe15e734e3da1566897777cac474df96459c4990e7e44014780796
size 192
